[FEATURE] Modeled Collection View (#11)
* readme + initial install templates script

* README

* readme + script step output

* readme + effect handling default implementation

* readme

* header structure

* add template gif to readme

* Readme tweaks

* initial commit for Modeled collection view

* initial collection template

* Modeled Collection View Controller template

* modeled collection view

--- a/xctemplates/Modeled CollectionViewController.xctemplate/TemplateInfo.plist
+++ b/xctemplates/Modeled CollectionViewController.xctemplate/TemplateInfo.plist
@@ -7,9 +7,9 @@
 	<key>Kind</key>
 	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
 	<key>Description</key>
-	<string>The Scaffolding for an MVVM VIewController</string>
+	<string>The scaffolding for an MVVM Collection</string>
 	<key>Summary</key>
-	<string>Modeled View Controller</string>
+	<string>Modeled Collection View Controller</string>
 	<key>SortOrder</key>
 	<string>1</string>
 	<key>Image</key>
